feat: implement /encoding/utf8 endpoint
